# tool-redmine-attachment-downloader

./: .gitignore  README.md  pyproject.toml
scripts/: delete_attachments.py  donwload_attachments.py  install_playwright.py
src/: main.py  redmine_browser_client.py  redmine_client.py
